demo html update

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,12 +18,12 @@
   <meta property="og:locale:alternate" content="ja_JP" />
   <meta property="og:url" content="/demo/index.html" />
 
-  <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset200802.css">
-  <link rel="stylesheet" href="/demo/css/style.min.css">
+  <link rel="stylesheet" href="//meyerweb.com/eric/tools/css/reset/reset200802.css">
+  <link rel="stylesheet" href="./css/style.min.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="/jquery.accessibility.min.js"></script>
-  <script src="/demo/js/init.js"></script>
+  <script src="../jquery.accessibility.min.js"></script>
+  <script src="./js/init.js"></script>
 </head>
 
 <body>
